feat: input component

--- a/generators/templates/Component.tsx.hbs
+++ b/generators/templates/Component.tsx.hbs
@@ -1,6 +1,4 @@
-import { HTMLChakraProps } from '@chakra-ui/system'
-
-export interface {{pascalCase name}}Props extends HTMLChakraProps<'div'> {
+export interface {{pascalCase name}}Props {
 }
 
 export const {{pascalCase name}} = (props: {{pascalCase name}}Props) => {
