--- a/generators/templates/stories.tsx.hbs
+++ b/generators/templates/stories.tsx.hbs
@@ -7,8 +7,8 @@ export default {
   component: {{pascalCase name}}
 } as Meta
 
-export const Template: StoryFn = (args) => <{{pascalCase name}} {...args} />
+const Template: StoryFn = (args) => <{{pascalCase name}} {...args} />
 
-export const Primary = Template.bind({})
+export const Default = Template.bind({})
 
-Primary.args = {}
+Default.args = {}
