--- a/generators/templates/stories.tsx.hbs
+++ b/generators/templates/stories.tsx.hbs
@@ -7,7 +7,7 @@ export default {
   component: {{pascalCase name}}
 } as Meta
 
-const Template: StoryFn = (args) => <{{pascalCase name}} {...args} />
+const Template: StoryFn<typeof {{pascalCase name}}> = (args) => <{{pascalCase name}} {...args} />
 
 export const Default = Template.bind({})
 
