--- a/generators/templates/test.tsx.hbs
+++ b/generators/templates/test.tsx.hbs
@@ -1,11 +1,12 @@
+import React from 'react';
 import { render, screen } from '../../../utils/test-utils'
 
 import { {{pascalCase name}} } from '.'
 
 describe('<{{pascalCase name}} />', () => {
-  it('should render the heading', () => {
+  it('should render the {{name}}', () => {
     render(<{{pascalCase name}} />)
 
-    expect(screen.getByRole('heading', { name: /{{pascalCase name}}/i })).toBeInTheDocument()
+    expect(screen.getByRole('{{name}}', { name: /{{pascalCase name}}/i })).toBeInTheDocument()
   })
 })
